yaml/eap-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eap-custom
  name: eap-custom
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: eap-custom
